--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dev-container
-        image: <todo>
+        image: us-west1-docker.pkg.dev/qwiklabs-gcp-01-3f9836f4f8b1/my-repository/hello-cloudbuild-dev:v1.0
         ports:
         - containerPort: 8080
